Added retry handlers for all streamable data sources. New config added for...